--- a/website part1.html
+++ b/website part1.html
@@ -41,11 +41,56 @@
     </div>
 
     <div class="carousel-container">
-        <img src="pexels-albinberlin-919073.jpg" height="300" width="300" alt="" class="myslides">
-        <img src="pexels-mikebirdy-112460.jpg" height="300" width="300" alt="" class="myslides">
-        <img src="pexels-mikebirdy-120049.jpg" height="300" width="300" alt="" class="myslides">
+        <img src="pexels-albinberlin-919073.jpg" height="300" width="800" alt="" class="myslides">
+        <img src="pexels-mikebirdy-112460.jpg" height="300" width="800" alt="" class="myslides">
+        <img src="pexels-mikebirdy-120049.jpg" height="300" width="800" alt="" class="myslides">
     </div>
 
+    <section>
+        <br>
+        <span class="border trans" style="font-size: 40px;">
+            <center>Welcome all to this website</center>    
+        </span><br>
+    </section>
+    
+    <section class="section section-dark">
+        <h2>Food</h2>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+             Dolorum, laudantium id. Ea unde odio vero, beatae libero consequatur.
+             Et delectus, velit atque molestiae omnis quasi doloribus voluptatum dolore doloremque quae.
+        </p>
+
+    </section>
+
+    <div class="pimg3">
+        <div class="ptext">
+            <span class="border trans">
+                Food is a substance eaten or absorbed by organism to survive and for nutrition.
+            </span>
+        </div>
+    </div>
+
+        <p>pizza</p>
+
+        <p><img src="pexels-pixabay-280453.jpg" style="width: 170px; height: 170px; margin-left: 15px; float: right;" alt="">
+            pizza(Italian, Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Sint ex pariatur nisi nihil perspiciatis? Voluptate harum accusantium repellat eius,
+              dolor cumque totam est voluptas,
+             commodi porro, similique reprehenderit recusandae quas!)
+        </p>
+        <hr>
+        <p>pizza</p>
+
+        <p><img src="pexels-muffin-1653877.jpg" style="width: 170px; height: 170px; margin-right: 15px; float: left;" alt="">
+            pizza(Italian, Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Sint ex pariatur nisi nihil perspiciatis? Voluptate harum accusantium repellat eius,
+            dolor cumque totam est voluptas,
+            commodi porro, similique reprehenderit recusandae quas!)
+        </p><br><br><br>
+        <section class="section section-dark">
+            all @copy rights reserved by codingal
+        </section>
     <script src="script.js">
 
     </script>
